reverted images to originals and using visibility to fix the shifting between vertical to full screen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -84,6 +84,8 @@
 
 	/*-webkit-transform: translateZ(0);
 	width: calc(100% + .49px);*/
+	width: 26px;
+	height: 26px;
 }
 
 .center-image.vertical {
